crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__block_if__missing_then.snap
---
source: crates/service/tests/diagnostics/typeck/block_if.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: expected then block"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 7
        },
        "end": {
          "line": 7,
          "character": 11
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: unexpected token"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 11
        },
        "end": {
          "line": 7,
          "character": 12
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: unexpected token"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `then` branch with expected types []"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `then` branch with expected types []"
    }
  ]
}
